--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
     <!--Esto es para poner comentario-->
     <h1>Centro Universitario de los Valles</h1>
     <h2>Inicio de Diplomado en Desarollo Web</h2>
-    <br>
     <h3>This is my first practice in Diplomat</h3>
     <BR></BR>
     <p>Esto es un parrafo</p>
     <!--esto es una etiqueta con atributo-->
     <a href="https://google.com.mx/">Ir a la página de Google </a>
-    <br><br>
+    <br>
     <a href="http://127.0.0.1/introduccion-web/tabla.html">Ver tabla</a>
-    <a href="http://127.0.0.1/introduccion-web/Colores.html">Ver tabla</a>
+    <br>
+    <a href="http://127.0.0.1/introduccion-web/Colores.html">Colores</a>
+    <br>
+    <a href="http://127.0.0.1/introduccion-web/Imagenes.html">Imagenes</a>
+    <br>
+    <a href="http://127.0.0.1/introduccion-web/Video.html">Video</a>
 
 </body>
 </html>
