--- a/Tabla.html
+++ b/Tabla.html
@@ -6,8 +6,8 @@
     <title>Tabla</title>
 </head>
 <body>
-    <table>
-    <TR>
+    <table style="background-color: blue;">
+    <TR style="background-color: chartreuse; color: darkblue;">
         <th>Nombre</th>
         <th>Apellido</th>
         <th>Edad</th>
