--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <a href="http://127.0.0.1/introduccion-web/Imagenes.html">Imagenes</a>
     <br>
     <a href="http://127.0.0.1/introduccion-web/Video.html">Video</a>
+    <BR>
+    <a href="http://127.0.0.1/introduccion-web/Audio.html">audio</a>
+    <br>
+    <a href="http://127.0.0.1/introduccion-web/Graficos.html">Graficos</a>
 
 </body>
 </html>
