--- a/Graficos.html
+++ b/Graficos.html
@@ -11,6 +11,25 @@
     stroke="green" stroke-width="4" fill="yellow"/>
 
     </svg>
+    <!--Grafico SVG de un rectangulo-->
+    <svg width="200" height="100">
+        <rect width="200" height="100"
+        style="fill: blue;"
+        stroke-width=10; stroke: "black"/>
+
+    </svg>
+
+    <!--Graficos de Canvas-->
+    <canvas id="myCanvas" width="200" height="100"
+    style="border:1px solid #000000;"></canvas>
+
+    <script>
+        var c = document.getElementById("myCanvas");
+        var ctx = c.getContext("2d");
+        ctx.moveTo(0,0);
+        ctx.lineTo(200,100);
+        ctx.stroke();
+    </script>
     
 </body>
 </html>
