--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <a href="http://127.0.0.1/introduccion-web/Audio.html">audio</a>
     <br>
     <a href="http://127.0.0.1/introduccion-web/Graficos.html">Graficos</a>
+    <br>
+    <a href="http://127.0.0.1/introduccion-web/Formularios.html">Formularios</a>
 
 </body>
 </html>
