--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <a href="http://127.0.0.1/introduccion-web/Formularios.html">Formularios</a>
     <br>
     <a href="http://127.0.0.1/introduccion-web/Select.html">Select</a>
+    <br>
+    <a href="http://127.0.0.1/introduccion-web/CheckBox_RadioButtom.html">CheckBox_RadioButtom</a>
 
 </body>
 </html>
