Primer Estilo con CSS

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <a href="http://127.0.0.1/introduccion-web/Select.html">Select</a>
     <br>
     <a href="http://127.0.0.1/introduccion-web/CheckBox_RadioButtom.html">CheckBox_RadioButtom</a>
+    <br>
+    <a href="http://127.0.0.1/introduccion-web/Estilo1.html">Estilo1</a>
 
 </body>
 </html>
