--- a/CheckBox_RadioButtom.html
+++ b/CheckBox_RadioButtom.html
@@ -18,12 +18,14 @@
 <br><br>
 
 <!--Check Box-->
-input type="checkbox" id="vehicle1" name="vehicle1" value="Bici">
+<input type="checkbox" id="vehicle1" name="vehicle1" value="Bici">
 <label for="vehicle1"> Tengo una bici</label><br>
 <input type="checkbox" id="vehicle2" name="vehicle2" value="Carro">
 <label for="vehicle2"> Tengo un carro</label><br>
 <input type="checkbox" id="vehicle3" name="vehicle3" value="Bote">
 <label for="vehicle3"> Tengo un bote</label><br>
+
+<button type="button" onclick="alert('Hola Walter!')">Da click!</button>
 
 <br><br>
 <input type="submit" value="Guardar">
