--- a/Estilo1.html
+++ b/Estilo1.html
@@ -15,12 +15,15 @@
         p {
             font-family: Verdana;
             font-size: 20px;
+            /*Prefijo para el navegador Firefox*/
+            background-image: -moz-linear-gradient(top, #F4FA58, #FF0000);
+            background-color: #F4FA58;
         }
     </style>
 </head>
 <body>
     <h1>Mi primer ejemplo con CCS</h1>
-    <p>Estos es un parrafo</p>
+    <p>Esto es un parrafo</p>
     
 </body>
 </html>
