Ordenamiento del Proyecto

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
     <!--esto es una etiqueta con atributo-->
     <a href="https://google.com.mx/">Ir a la página de Google </a>
     <br>
-    <a href="http://127.0.0.1/introduccion-web/tabla.html">Ver tabla</a>
+    <a href="http://127.0.0.1/introduccion-web/views/html/tabla.html">Ver tabla</a>
     <br>
-    <a href="http://127.0.0.1/introduccion-web/Colores.html">Colores</a>
+    <a href="http://127.0.0.1/introduccion-web/views/html/Colores.html">Colores</a>
     <br>
-    <a href="http://127.0.0.1/introduccion-web/Imagenes.html">Imagenes</a>
+    <a href="http://127.0.0.1/introduccion-web/views/html/Imagenes.html">Imagenes</a>
     <br>
-    <a href="http://127.0.0.1/introduccion-web/Video.html">Video</a>
+    <a href="http://127.0.0.1/introduccion-web/views/html/Video.html">Video</a>
     <BR>
-    <a href="http://127.0.0.1/introduccion-web/Audio.html">audio</a>
+    <a href="http://127.0.0.1/introduccion-web/views/html/Audio.html">Audio</a>
     <br>
-    <a href="http://127.0.0.1/introduccion-web/Graficos.html">Graficos</a>
+    <a href="http://127.0.0.1/introduccion-web/views/html/Graficos.html">Graficos</a>
     <br>
-    <a href="http://127.0.0.1/introduccion-web/Formularios.html">Formularios</a>
+    <a href="http://127.0.0.1/introduccion-web/views/html/Formularios.html">Formularios</a>
     <br>
-    <a href="http://127.0.0.1/introduccion-web/Select.html">Select</a>
+    <a href="http://127.0.0.1/introduccion-web/views/html/Select.html">Select</a>
     <br>
-    <a href="http://127.0.0.1/introduccion-web/CheckBox_RadioButtom.html">CheckBox_RadioButtom</a>
+    <a href="http://127.0.0.1/introduccion-web/views/html/CheckBox_RadioButtom.html">CheckBox_RadioButtom</a>
     <br>
-    <a href="http://127.0.0.1/introduccion-web/Estilo1.html">Estilo1</a>
+    <a href="http://127.0.0.1/introduccion-web/views/html con estilos/estilo1.html">Estilo1</a>
 
 </body>
 </html>
