Organización del Index

--- a/index.html
+++ b/index.html
@@ -8,32 +8,46 @@
 <body>
     <!--Esto es para poner comentario-->
     <h1>Centro Universitario de los Valles</h1>
-    <h2>Inicio de Diplomado en Desarollo Web</h2>
-    <h3>This is my first practice in Diplomat</h3>
-    <BR></BR>
-    <p>Esto es un parrafo</p>
+    <h2>Introducción al Desarollo Web</h2>
+
+    <table border="1">
+        <tr>
+            <th>HTML</th>
+            <th>CSS</th>
+        </tr>
+        <tbody>
+            <tr>
+                <td style="vertical-align: text-top;">
+                    <a href="http://127.0.0.1/introduccion-web/views/html/tabla.html">Tabla</a>
+                    <br>
+                    <a href="http://127.0.0.1/introduccion-web/views/html/Colores.html">Colores</a>
+                    <br>
+                    <a href="http://127.0.0.1/introduccion-web/views/html/Imagenes.html">Imagenes</a>
+                    <br>
+                    <a href="http://127.0.0.1/introduccion-web/views/html/Video.html">Video</a>
+                    <BR>
+                    <a href="http://127.0.0.1/introduccion-web/views/html/Audio.html">Audio</a>
+                    <br>
+                    <a href="http://127.0.0.1/introduccion-web/views/html/Graficos.html">Graficos</a>
+                    <br>
+                    <a href="http://127.0.0.1/introduccion-web/views/html/Formularios.html">Formularios</a>
+                    <br>
+                    <a href="http://127.0.0.1/introduccion-web/views/html/Select.html">Select</a>
+                    <br>
+                    <a href="http://127.0.0.1/introduccion-web/views/html/CheckBox_RadioButtom.html">CheckBox_RadioButtom</a>
+                    <br>
+                    <a href="http://127.0.0.1/introduccion-web/views/html con estilos/estilo1.html">Estilo1</a>
+                    <br>
+                </td>
+                <td></td>
+            </tr>
+            
+        </tbody>
+    </table>
+    <!--<p>Esto es un parrafo</p>
+
     <!--esto es una etiqueta con atributo-->
-    <a href="https://google.com.mx/">Ir a la página de Google </a>
-    <br>
-    <a href="http://127.0.0.1/introduccion-web/views/html/tabla.html">Ver tabla</a>
-    <br>
-    <a href="http://127.0.0.1/introduccion-web/views/html/Colores.html">Colores</a>
-    <br>
-    <a href="http://127.0.0.1/introduccion-web/views/html/Imagenes.html">Imagenes</a>
-    <br>
-    <a href="http://127.0.0.1/introduccion-web/views/html/Video.html">Video</a>
-    <BR>
-    <a href="http://127.0.0.1/introduccion-web/views/html/Audio.html">Audio</a>
-    <br>
-    <a href="http://127.0.0.1/introduccion-web/views/html/Graficos.html">Graficos</a>
-    <br>
-    <a href="http://127.0.0.1/introduccion-web/views/html/Formularios.html">Formularios</a>
-    <br>
-    <a href="http://127.0.0.1/introduccion-web/views/html/Select.html">Select</a>
-    <br>
-    <a href="http://127.0.0.1/introduccion-web/views/html/CheckBox_RadioButtom.html">CheckBox_RadioButtom</a>
-    <br>
-    <a href="http://127.0.0.1/introduccion-web/views/html con estilos/estilo1.html">Estilo1</a>
+
 
 </body>
 </html>
