selector pseudo clase

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                     <a href="http://127.0.0.1/introduccion-web/views/html con estilos/Selectores_Simples.html">Selectores_Simples</a>
                     <br>
                     <a href="http://127.0.0.1/introduccion-web/views/html con estilos/selectores_combinadores.html">Selectores Combinadores</a>
+                    <br>
+                    <a href="http://127.0.0.1/introduccion-web/views/html con estilos/selector_pseudo-clase.html">Selector pseudo-clase</a>
                 </td>
             </tr>
             
