selector de pseudo elementos

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                     <a href="http://127.0.0.1/introduccion-web/views/html con estilos/selectores_combinadores.html">Selectores Combinadores</a>
                     <br>
                     <a href="http://127.0.0.1/introduccion-web/views/html con estilos/selector_pseudo-clase.html">Selector pseudo-clase</a>
+                    <br>
+                    <a href="http://127.0.0.1/introduccion-web/views/html con estilos/selector_pseudo-elemento.html">Selector pseudo-elemento</a>
                 </td>
             </tr>
             
