--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                     <a href="http://127.0.0.1/introduccion-web/views/html con estilos/selector_pseudo-clase.html">Selector pseudo-clase</a>
                     <br>
                     <a href="http://127.0.0.1/introduccion-web/views/html con estilos/selector_pseudo-elemento.html">Selector pseudo-elemento</a>
+                    <br>
+                    <a href="http://127.0.0.1/introduccion-web/views/html con estilos/selector_atributos.html">Selector de atributos</a>
                 </td>
             </tr>
             
